<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_API">This app uses Java-SSLLabs-API by Björn Roland and Qualys SSL Labs.</string>
    <string name="about_affiliation">In affiliation with</string>
    <string name="about_author">Author</string>
    <string name="about_author_contributors">and contributors.</string>
    <string name="about_author_names">Felix Tsala Schiller</string>
    <string name="action_refresh_title">Refresh</string>
    <string name="action_search">action Search</string>
    <string name="action_startstop_start">Start</string>
    <string name="app_name">Net Monitor</string>
    <string name="app_name_long">Privacy Friendly Net Monitor</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bg_desc">Connection monitoring is active</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="d">d></string>
    <string name="days">days</string>
    <string name="deleteButton">Delete History of selected Apps</string>
    <string name="dialogMessage">Report Deletion</string>
    <string name="dialogTitle">Delete all reports?</string>
    <string name="drawer_about">About</string>
    <string name="drawer_help">Help</string>
    <string name="drawer_history">History</string>
    <string name="drawer_main">Main</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_tutorial">Tutorial</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">"DUMMY
CONTENT"</string>
    <string name="encrypted">encrypted</string>
    <string name="github"><a href="https://github.com/SecUSo/privacy-friendly-netmonitor/">Github-Repo</a></string>
    <string name="headline_report_detail">Detail View</string>
    <string name="help">Help</string>
    <string name="help_button">Help</string>
    <string name="help_feature_five">What is certificate validation?</string>
    <string name="help_feature_five_answer">"An automatic analysis of the remote servers TLS implementation can be activated in the settings. When active, remote servers with a resolved hostname are tested automatically when the connection protocol is known for using TLS encryption. The analysis is performed by SSL Labs API and the associated service. The remote server's implementation quality is shown in grades A+ (best) to F (worst), or is displayed as T (trust issues). For further information on SSL Lab API see the About."</string>
    <string name="help_feature_four">What are detailed reports?</string>
    <string name="help_feature_four_answer">A detailed mode can be switched on in the settings. After activation additional technical information of scanned connections is displayed after a connection has been touched in the overview.</string>
    <string name="help_feature_one">How does connection monitoring work?</string>
    <string name="help_feature_one_answer">Net Monitor deploys an background service, which scans for active connections every second. Apps invoking the detected connections are identified and listed with remote addresses they are communicating with.</string>
    <string name="help_feature_three">What is hostname resolution?</string>
    <string name="help_feature_three_answer">The remote host name assigned is requested by reverse name resolution. This is done asynchronously in background and thus may take some seconds. Remark: The resolved hostname may not be the actual domain name requested by e.g. a browser app.</string>
    <string name="help_feature_two">What is protocol and encryption detection?</string>
    <string name="help_feature_two_answer">"Based on a connection's remote port, the transport protocol can be identified by Well Known Port tables. Based on the known ports, a warning is given in case a connection is known for not being encrypted. Note, that this is no grantee that the connection uses this protocol, since assignment of port numbers is not enforced by the system."</string>
    <string name="help_permission">Which permissions requires the app?</string>
    <string name="help_permission_answer">Privacy Friendly Net Monitor does not require any permission for scanning active connections. The Certificate Validation feature requires the Internet permission to request server test results from Qualys SSL Labs.</string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly Net Monitor does not include any tracking mechanisms or advertisement and comes free of charge. It is published under GPLv3 license and is free to distribute. The information on network connections is not stored.</string>
    <string name="help_ssllabs">What is SSL-Labs</string>
    <string name="help_ssllabs_answer">SSL-Labs API from Qualys performs a deep analysis of SSL/TLS web server. Net Monitor requests analysis results on demand from SSL Labs. SSL-Labs privacy terms state, that it does not share submitted IP addresses or hostnames with any third party.</string>
    <string name="help_sysuser">What does the [System] tag mean?</string>
    <string name="help_sysuser_answer">"The [System] tag identifies an app pre-installed on the android system by the original equipment manufacturer (OEM). If the app is named 'System [System]', an android system component itself has invoked the connection (root-user)."</string>
    <string name="help_un_encrypted_ports">What are the meanings of unencrypted and encrypted ports in the detail view?</string>
    <string name="help_un_encrypted_ports_answer">In fact the ports are not unencrypted or encrypted. But a port is handling all the traffic of one service. This services communicates over a unencrypted or encrypted protocol. If an port is encrypted it means that the service, that communicates over this port, is using an encrypted protocol (vise versa for unencrypted).</string>
    <string name="help_whatis">What is Privacy Friendly Net Monitor?</string>
    <string name="help_whatis_answer">Privacy Friendly Net Monitor monitors network traffic from installed apps. It scans active network connections with a background service and also displays additional network encryption information.</string>
    <string name="history_no_data_collected">(No data collected)</string>
    <string name="hours">Hours</string>
    <string name="hr">hr</string>
    <string name="main_button_text_off">Start Net Monitor</string>
    <string name="main_text_normalbutton_desc">By touching the start button, Net Monitor starts a passive service which detects all active network connections. A background notification will inform you of the ongoing monitoring.</string>
    <string name="main_text_stopped">Net Monitor inactive</string>
    <string name="more_info">More information can be found on:</string>
    <string name="navigation_drawer_close">navigation_drawer_close</string>
    <string name="navigation_drawer_open">navigation_drawer_open</string>
    <string name="next">Next</string>
    <string name="no">No</string>
    <string name="nodata">"No reports available.
Please select some apps you
 want to monitor via the button
 in the right bottom corner."</string>
    <string name="oclock">"o'clock"</string>
    <string name="okay">Okay</string>
    <string name="passive_service_start">Net Monitor service has been started in passive mode.</string>
    <string name="passive_service_stop">Net Monitor service has been stopped. Was in passive mode.</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pref_advanced_switch">Detail Mode</string>
    <string name="pref_advanced_switch_summary">Show info tab when touching a connection.</string>
    <string name="pref_certval_switch">Server Validation</string>
    <string name="pref_certval_switch_summary">Perform analysis with SSL Labs API.</string>
    <string name="pref_connection_highlighting">Connection Highlighting</string>
    <string name="pref_connection_highlighting_summary">Highlights the connections in green and red.</string>
    <string name="pref_log_switch">Log Connections</string>
    <string name="pref_log_switch_summary">Keep detected information.</string>
    <string name="privacy_friendly">This app belongs to the group of Privacy Friendly Apps developed by Technische Universität Darmstadt. Sourcecode licensed under GPLv3. Images Copyright Technische Universität Darmstadt und Google Inc.</string>
    <string name="report_detail_heading">Detailed Technical Information</string>
    <string name="url"><a href="https://www.secuso.org/pfa">SECUSO-Website</a></string>
    <string name="url_API"><a href="https://github.com/bjoernr-de">Java-SSL Labs-API</a></string>
    <string name="url_SSLLabs"><a href="https://www.ssllabs.com/projects/ssllabs-apis">Qualys SSL Labs API</a></string>
    <string name="version_number">Version</string>
</resources>