<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@id/nav_group_main" android:checkableBehavior="all">
        <item android:icon="@drawable/ic_notification" android:id="@id/nav_main" android:title="@string/drawer_main" />
        <item android:icon="@drawable/ic_history" android:id="@id/nav_history" android:title="@string/drawer_history" />
        <item android:icon="@drawable/ic_tutorial" android:id="@id/nav_tutorial" android:title="@string/drawer_tutorial" />
    </group>
    <group android:id="@id/nav_group_add" android:checkableBehavior="all">
        <item android:icon="@drawable/ic_settings" android:id="@id/nav_settings" android:title="@string/drawer_settings" />
        <item android:icon="@drawable/ic_help" android:id="@id/nav_help" android:title="@string/drawer_help" />
        <item android:icon="@drawable/ic_menu_info" android:id="@id/nav_about" android:title="@string/drawer_about" />
    </group>
</menu>