<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/main_content" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior" style="@style/AlertDialog.AppCompat"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textColor="@color/black" android:gravity="center" android:id="@id/main_text_normalbutton_desc" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/main_text_normalbutton_desc" />
    <ImageView android:layout_gravity="center" android:id="@id/main_image_startstopp" android:layout_width="96.0dip" android:layout_height="wrap_content" android:src="@mipmap/ic_monitor_off" android:adjustViewBounds="true" android:cropToPadding="true" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    <TextView android:id="@id/main_text_startstop" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/main_text_stopped" android:layout_below="@id/main_image_startstopp" android:layout_centerHorizontal="true" />
    <ProgressBar android:id="@id/mainProgressBar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
</RelativeLayout>